fixing url text cutting off on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -586,6 +586,7 @@ time {
 #urlText {
   background: transparent;
   color: white;
+  width: 100%;
 }
 
 /*--------------------------------------------------------------
